<resources>
    <string name="app_name">Fauxify for Restaurant</string>
    <string name="request_url">http://fauxify.com/api/</string>

    <string name="open">open</string>
    <string name="close">close</string>

    <string name="Rs">\u20B9</string>
    <string name="rs">\u20A8</string>

    <string name="add_item">Add Item</string>
    <string name="empty_input_field">Input field is empty!</string>
    <string name="order_details">Order Details</string>
    <string name="enter_new_category">Enter a new Category name</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="delete_the_category">Delete the Category</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="blank_text_try_again">You entered blank text. Try again!</string>
    <string name="new_category">New Category</string>
    <string name="add_an_item">Add an Item</string>
    <string name="select_an_option">Select an Option:</string>
    <string name="update_details_ques">Do you want to update these details?</string>
    <string name="new_details_updated">New details updated</string>
    <string name="loading_dishes_offered">Loading Dishes offered…</string>
    <string name="loading_delivered_orders">Loading Delivered orders…</string>
    <string name="loading_pending_orders">Loading Pending orders…</string>
    <string name="loading_rest_details">Loading Restaurant details…</string>
    <string name="tap_back_again_exit">Tap \'back\' again to exit</string>
    <string name="pending_orders">Pending Orders</string>
    <string name="delivered_orders">Delivered Orders</string>
    <string name="dishes_offered">Dishes Offered</string>
    <string name="restaurant_status">Restaurant Status</string>
    <string name="edit_restaurant_details">Edit Restaurant Details</string>
    <string name="restaurant_is_active">Restaurant is Active</string>
    <string name="restaurant_is_inactive">Restaurant is Inactive</string>
    <string name="modify_item">Modify Item</string>
    <string name="item_modified">Item Modified</string>
    <string name="username_doesnt_exist">Username doesn\'t exist</string>
    <string name="login_failed">Login Failed</string>
    <string name="are_you_sure_order_delivered">Are you sure the Order is Delivered?</string>
    <string name="order_delivery_confirmed">Order Delivery Confirmed</string>
    <string name="delivery_confirmation">Delivery Confirmation</string>
    <string name="change_restaurant_status">Change Restaurant Status</string>
    <string name="item_name">Item Name</string>
    <string name="item_price_rs">Item Price (Rs)</string>
    <string name="non_vegetarian">Non-Vegetarian</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="submit">Submit</string>
    <string name="item_summary_and_details">Item Summary and Details</string>
    <string name="total_items">Total Items</string>
    <string name="total_items_amount">Total Items Amount</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="final_amount">Final Amount</string>
    <string name="other_details">Other Details</string>
    <string name="order_id">Order Id</string>
    <string name="customer_name">Customer Name</string>
    <string name="order_time">Order Time</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="restaurant_login_details">Restaurant Login Details</string>
    <string name="login">Login</string>
    <string name="item_summary">Item Summary</string>
    <string name="set_delivery_time">Set Delivery Time</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="xxx_minutes">XXX Minutes</string>
    <string name="xxx">XXX</string>
    <string name="xxxx_xxxx">XXXX XXXXX</string>
    <string name="x">x</string>
    <string name="select_another_time">Select Another Time</string>
    <string name="confirm_delivery">Confirm Delivery</string>
    <string name="order_delivered">Order Delivered</string>
    <string name="vegetarian_dish">Vegetarian Dish</string>
    <string name="non_vegetarian_dish">Non-Vegetarian Dish</string>
    <string name="categories_offered">Categories Offered</string>
    <string name="add_new_category">Add New Category</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="restaurant_type">Restaurant Type</string>
    <string name="minimum_order_rs">Minimum Order (Rs)</string>
    <string name="delivery_time_minutes">Delivery Time (minutes)</string>
    <string name="delivery_fee_rs">Delivery Fee (Rs)</string>
    <string name="amount_for_free_delivery_rs">Amount for free delivery (Rs)</string>
    <string name="set_restaurant_status">Set Restaurant Status</string>
    <string name="set_restaurant_as_active">Set Restaurant as Active</string>
    <string name="status_details">Status Details</string>
    <string name="active">Active</string>
    <string name="restaurant_active_msg">Customers CAN order food if Restaurant Status is set as \'Active\'</string>
    <string name="restaurant_inactive_msg">Customers CANNOT order food if Restaurant Status is set as \'Inactive\'</string>
    <string name="vegetarian_dish_imageview">Vegetarian Dish ImageView</string>
    <string name="non_vegetarian_dish_imageview">Non-Vegetarian Dish ImageView</string>
    <string name="default_status">Default Status</string>
    <string name="total">Total</string>
    <string name="inactive">inactive</string>


    <string-array name="Timing">
        <item>Select a Delivery Time</item>
        <item>20 minutes</item>
        <item>30 minutes</item>
        <item>40 minutes</item>
        <item>50 minutes</item>
        <item>60 minutes</item>
        <item>75 minutes</item>
        <item>90 minutes</item>
    </string-array>

</resources>
