<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal"
    android:padding="12dp">

    <ImageView
        android:id="@+id/isVegDish"
        android:contentDescription="@string/vegetarian_dish"
        android:src="@drawable/dish_type_veg"
        android:visibility="gone"
        android:layout_margin="5dp"
        android:layout_gravity="center_vertical"
        android:layout_width="10dp"
        android:layout_height="10dp"/>

    <ImageView
        android:id="@+id/isNonvegDish"
        android:contentDescription="@string/non_vegetarian_dish"
        android:src="@drawable/dish_type_nonveg"
        android:visibility="gone"
        android:layout_margin="5dp"
        android:layout_gravity="center_vertical"
        android:layout_width="10dp"
        android:layout_height="10dp"/>

    <TextView
        android:id="@+id/child_dishname_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical"
        android:textSize="14sp"
        android:text="@string/xxxx_xxxx"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal"
        android:gravity="end">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingEnd="4dp"
            android:paddingStart="4dp"
            android:textSize="14sp"
            android:text="@string/Rs"/>

        <TextView
            android:id="@+id/child_dishprice_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textSize="14sp"
            android:text="@string/xxx"/>

    </LinearLayout>

</LinearLayout>