<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    cardView:cardCornerRadius="2dp"
    cardView:cardElevation="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:baselineAligned="false"
            android:paddingStart="5dp"
            android:paddingEnd="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp">

                <ImageView
                    android:contentDescription="@string/vegetarian_dish_imageview"
                    android:src="@drawable/dish_type_veg"
                    android:id="@+id/img_green_confirm"
                    android:visibility="gone"
                    android:layout_margin="5dp"
                    android:layout_gravity="center_vertical"
                    android:layout_width="8dp"
                    android:layout_height="8dp"/>

                <ImageView
                    android:contentDescription="@string/non_vegetarian_dish_imageview"
                    android:src="@drawable/dish_type_nonveg"
                    android:id="@+id/img_red_confirm"
                    android:visibility="visible"
                    android:layout_margin="5dp"
                    android:layout_gravity="center_vertical"
                    android:layout_width="8dp"
                    android:layout_height="8dp"/>

                <TextView
                    android:id="@+id/orderrow_orderconfirmed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textAlignment="center"
                    android:textSize="11sp"
                    android:text="@string/default_status"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <ImageView
                    android:contentDescription="@string/vegetarian_dish_imageview"
                    android:src="@drawable/dish_type_veg"
                    android:id="@+id/img_deliver_green"
                    android:visibility="gone"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:layout_width="8dp"
                    android:layout_height="8dp"/>

                <ImageView
                    android:contentDescription="@string/non_vegetarian_dish_imageview"
                    android:src="@drawable/dish_type_nonveg"
                    android:id="@+id/img_deliver_red"
                    android:visibility="visible"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:layout_width="8dp"
                    android:layout_height="8dp"/>

                <TextView
                    android:id="@+id/orderrow_orderdelivered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textAlignment="center"
                    android:textSize="11sp"
                    android:text="@string/default_status"/>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/sectionSeparatorCardView"
            android:background="@color/sectionSeparatorCardView"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/orderrow_custname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="2dp"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp"
                android:text="@string/restaurant_name"/>

            <TextView
                android:id="@+id/orderrow_ordertime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:textSize="12sp"
                android:text="@string/xxxx_xxxx"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/sectionSeparatorCardView"
            android:background="@color/sectionSeparatorCardView"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:textSize="14sp"
                    android:text="@string/order_id"/>

                <TextView
                    android:id="@+id/orderrow_orderid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/xxx"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/total"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="2dp"
                    android:paddingEnd="2dp"
                    android:textSize="14sp"
                    android:text="@string/Rs" />

                <TextView
                    android:id="@+id/orderrow_totalprice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/xxx" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>